--- a/_includes/schema/concrete-staining.html
+++ b/_includes/schema/concrete-staining.html
@@ -26,20 +26,45 @@
       "@context": "http://schema.org",
       "@type": "Service",
       "provider": {
-          "@type": "Organization",
-          "name": "Elite Concrete Utah",
-          "address": {
-              "@type": "PostalAddress",
-              "streetAddress": "3596 South 300 West Suite 10",
-              "postalCode": "11234",
-              "addressRegion": "NY",
-              "addressLocality": "Brooklyn",
-              "addressCountry": "http://www.wikidata.org/entity/Q30",
-              "name": "Postal Address",
-              "@id": "https://www.ckitchen.com/#PostalAddress"
-          },
-          "description": "When you’re shopping around for commercial kitchen equipment, you want a supplier that’s an authorized dealer of top brands, provides the guaranteed lowest prices and is staffed by a team of well-trained commercial kitchen experts. Only one company checks all those boxes and more, and that’s CKitchen.com. Not only do you get an unbeatable selection and top-quality service here, but you’ll also appreciate that 10 percent of our profits go to charity, so you can feel good about shopping with us. We’re one of the web’s top commercial kitchen suppliers, and can even provide you with professional food service consulting and kitchen design services based on your individual needs and budget.  Our selection of commercial kitchen supplies includes everything from cutting-edge bar, bakery and concession equipment to catering equipment, supplies and appliances that can handle large volumes. It doesn’t matter if you’re operating a brick-and-mortar restaurant or food truck, CKitchen.com can outfit your business with the supplies required to boost efficiency, sales and productivity. We have commercial food preparation equipment, gas and electric ranges, ice machines, refrigerators, walk-in coolers and freezers, beverage systems, sinks, tables, shelving, and many more supplies that will help transform your commercial kitchen so it can handle even the most demanding needs.",
-          "@id": "https://www.ckitchen.com/"
+        "@type": "GeneralContractor",
+        "name": "Elite Concrete Utah",
+        "image": "https://eliteconcreteutah.com/img/Elite-Concrete-Logo.png",
+        "@id": "https://eliteconcreteutah.com",
+        "url": "https://eliteconcreteutah.com",
+        "telephone": "+18015507496",
+        "priceRange": "$$",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "3596 South 300 West #10",
+          "addressLocality": "Salt Lake City",
+          "addressRegion": "UT",
+          "postalCode": "84115",
+          "addressCountry": "US"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 40.6929301,
+          "longitude": -111.9001526
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "07:00",
+          "closes": "19:00"
+        },
+        "sameAs": [
+          "https://www.facebook.com/eliteconcreteut/",
+          "https://twitter.com/eliteconcreteut",
+          "https://www.instagram.com/eliteconcreteut/",
+          "https://www.pinterest.com/eliteconcreteut/",
+          "https://eliteconcreteutah.com/"
+        ]
       },
       "logo": {
           "@id": "https://cdn.ckitchen.com/i_l/logos/ckitchen.png"
