--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -260,8 +260,8 @@
                                     </div>
                                     <div class="media-body space-md">
                                         <ul>
-                                            <li><a href="https://g.page/elite-concrete-utah?we" target="_blank">3596 South 300 West Suite 10 <br />
-                                            Salt Lake City, UT 84115</a></li>
+                                            <li>3596 South 300 West Suite 10 <br />
+                                            Salt Lake City, UT 84115</li>
                                         </ul>
                                     </div>
                                 </div>
